force-app/main/default/objects/Notification__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Values: &quot;Email,&quot; &quot;In-App.&quot; Specifies the delivery method.</description>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>