force-app/main/default/objects/Notification__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The content of the notification. This could be populated from the Email_Template__c or In_App_Notification_Template__c on the Notification_Rule__c, with merge fields resolved.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>