force-app/main/default/objects/Notification__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>If the notification failed, this stores the error message.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>