force-app/main/default/objects/Notification__c/fields/External_Recipient__c.field-meta.xml
<CustomField>
    <fullName>External_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the external recipient of the notification. Must be associated to a contact</description>
    <label>External Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>