force-app/main/default/objects/Notification__c/fields/Included_In_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Included_In_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the notification was included in a newsletter.</description>
    <label>Included In Newsletter</label>
    <type>Checkbox</type>
</CustomField>