force-app/main/default/objects/Notification__c/fields/Internal_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Internal_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the internal recipient of the noification, Must be assocaited to a user.</description>
    <label>Internal Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>