force-app/main/default/objects/Notification__c/fields/Notification_Rule__c.field-meta.xml
<CustomField>
    <fullName>Notification_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the notification to the rule that generated it.</description>
    <label>Notification Rule</label>
    <referenceTo>Notification_Rule__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>