force-app/main/default/objects/Notification__c/fields/Recipient_CC_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Recipient_CC_Email_List__c</fullName>
    <description>List of email addresses delimited by , (comma) which should be on the CC field of the email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient CC Email List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>