force-app/main/default/objects/Notification__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Stores the recipient&apos;s email address. Used when Recipient_Type_TO__c on the rule is &quot;External Email&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>