force-app/main/default/objects/Notification__c/fields/Scheduled_Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Date_Time__c</fullName>
    <description>When the notification should be sent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Send Date Time</label>
    <type>DateTime</type>
</CustomField>