force-app/main/default/objects/Notification__c/fields/Send_Via__c.field-meta.xml
<CustomField>
    <fullName>Send_Via__c</fullName>
    <description>Values: &quot;Salesforce&quot;, &quot;Other&quot;. Specifies how the notification was sent.</description>
    <label>Send Via</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>