force-app/main/default/objects/Notification__c/fields/Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date_Time__c</fullName>
    <description>When the notification was sent (or attempted to be sent).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent Date Time</label>
    <type>DateTime</type>
</CustomField>