force-app/main/default/objects/Notification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject of the notification (used for both email and potentially in-app).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>