force-app/main/default/objects/Notification__c/fields/Viewed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Date_Time__c</fullName>
    <description>When the in-app notification was viewed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Viewed Date Time</label>
    <type>DateTime</type>
</CustomField>